# remake

./: .gitignore  NewPattern.hs  Parse.hs  Pattern.hs  Types.hs  paper.md  paper.odt  remake.cabal
old/: make-paper.sh
src/Sound/Tidal2/: Parse.hs  Pattern.hs  Types.hs
test/: Test.hs
