cabal-version:      2.4
name:               tidal-remake
version:            0.1.0

synopsis: DSL for live coding pattern and rhythm

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alex McLean
maintainer:         Alex McLean <alex@slab.org>

-- A copyright notice.
-- copyright:
category: Sound
license-file: LICENSE
-- extra-source-files: CHANGELOG.md

library remake
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      mtl,
                      megaparsec
    hs-source-dirs:   src
    ghc-options: -Wall
    default-language: Haskell2010
    Exposed-modules: Sound.Tidal2.Pattern
                     Sound.Tidal2.Parse
                     Sound.Tidal2.Types
test-suite tests
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    main-is: Test.hs
    hs-source-dirs:
        test
    ghc-options: -Wall
--    other-modules: Sound.Tidal2.PatternTest
--                   Sound.Tidal2.ParseTest
--                   Sound.Tidal2.TypesTest
  build-depends:
                base ==4.*
              , hspec
              , hspec-megaparsec
              , containers
              , megaparsec
              , remake
